--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -3,7 +3,7 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 28px;
-
+  text-decoration: underline;
 }
 
 .header__lang-link_active:hover {
