--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
-  color: #FFFFFF;
+  color: inherit;
 }
 
 @media (max-width: 1023px) {
