--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,9 +1,10 @@
 .cover__link {
   text-decoration: none;
   display: block;
-  padding: 245px calc((100% - 560px)/2);
+  padding: 245px 312px;
+  /*padding: 245px calc((100% - 560px)/2);*/
   background-image: url(../../../images/__background.png);
-  background-size: 100% 100%;
+  background-size: cover;
   color: inherit;
   position: relative;
   z-index: 1;
