--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,6 +1,7 @@
 .place__url-heading {
   margin: 0;
   font-size: 12px;
-  line-height: 100%;
+  line-height: 20px;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
 }
