--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,5 +1,7 @@
 .body {
-  margin: 0;
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1280px;
   padding-top: 28px;
   padding-bottom: 24px;
   background: #2A2C2F;
