--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,8 @@
 .cover__title {
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 32px;
   font-weight: 900;
+  max-width: 560px;
   font-size: 72px;
   line-height: 76px;
   text-align: center;
@@ -11,5 +12,6 @@
   .cover__title{
     font-size: 32px;
     line-height: 35px;
+    max-width: 288px;
   }
 }
