--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,19 +1,5 @@
 .header__lang-link_active {
-  color: inherit;
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 28px;
   text-decoration: underline;
-}
-
-.header__lang-link_active:hover {
-  opacity: 0.8;
-  transition: opacity .5s ease-in-out;
-}
-
-@media (max-width:767px) {
-  .header__lang-link_active {
-    font-size: 18px;
-    line-height: 20px;
-  }
+  /*display: inline;*/
+  margin-right: 18px;
 }
