--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,12 +1,10 @@
 .lead__caption {
   margin: 0;
-  max-width: 170px;
-  max-height: 14px;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
   line-height: 14px;
-  letter-spacing: .15;
+  letter-spacing: .15em;
   text-transform: uppercase;
   color: #FFFFFF;
   margin-top: 8px;
