--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,6 @@
   margin: 0;
   margin: 32px auto 64px;
   max-width: 640px;
-  max-height: 72px;
   align-self: center;
   font-style: normal;
   font-weight: normal;
@@ -15,8 +14,8 @@
 @media (max-width:767px) {
   .lead__subtitle{
     font-size: 16px;
+    line-height: 20px;
     max-width: 288px;
-    min-height: 40px;
     margin: 16px auto 40px;
   }
 }
