--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,4 +1,10 @@
 .header__lang-links {
   list-style: none;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.header__lang-links:last-child {
+  margin: 0;
 }
